--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Basic HTML File</title>
+  <title>World Food Trucks Interactive Map</title>
 </head>
 <body>
 
