--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <p>Please rotate your screen</p>
   </div>
   <div class="content">
-    <div id="image-map-pro"></div>
+    <!-- Your main content goes here -->
+    <div id="image-map-pro">
+      <!-- Your map will be displayed here -->
+    </div>
   </div>
   <!-- Include your existing script.js file if needed -->
   <script src="script.js"></script>
