--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>World Food Trucks Interactive Map</title>
+  <title>WFT MAP v3</title>
   <style>
     #rotate-message {
       display: none;
