--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 </head>
 <body>
 
-  <div id="image-map-pro"></div>
-  <div data-imp-detached-menu="My Map"></div>
-  <div id="rotate-message">Please rotate your phone to view the map.</div>
+  <div id="image-map-pro">
+    <h1>WFT MAP v2</h1>
+    <div data-imp-detached-menu="My Map"></div>
+    <div id="rotate-message">Please rotate your phone to view the map.</div>
+    <img id="logo" src="logo.png" alt="Logo">
+  </div>
 
   <script src="image-map-pro.min.js"></script>
   <script>
