--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WFT MAP v2.1</title>
+  <title>WFT MAP v2</title>
   <style>
     #rotate-message {
       display: none;
@@ -23,12 +23,9 @@
 </head>
 <body>
 
-  <div id="image-map-pro">
-    <h1>WFT MAP v2.1</h1>
-    <div data-imp-detached-menu="My Map"></div>
-    <div id="rotate-message">Please rotate your phone to view the map.</div>
-    <img id="logo" src="logo.png" alt="Logo">
-  </div>
+  <div id="image-map-pro"></div>
+  <div data-imp-detached-menu="My Map"></div>
+  <div id="rotate-message">Please rotate your phone to view map.</div>
 
   <script src="image-map-pro.min.js"></script>
   <script>
