--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="image-map-pro"></div>
   <div data-imp-detached-menu="My Map"></div>
-  <div id="rotate-message">Please rotate your phone to view the content.</div>
+  <div id="rotate-message">Please rotate your phone to view the map.</div>
 
   
   <script>
