--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>map</title>
+  <title>WFT MAP</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
@@ -64,7 +64,6 @@
     <div id="rotate-message-container">
       <img src="logo.png" alt="Logo" id="logo">
       <div id="rotate-text">Please rotate your phone to view the map.</div>
-      <a href="https://www.worldfoodtrucks.com" id="go-back-btn">Go Back</a>
     </div>
   </div>
 
