--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WFT MAP 1.01</title>
+	<title>WFT MAP 1.02</title>
 	<style>
-		@keyframes rotate {
-		  from {
-		    transform: rotate(0deg);
-		  }
-		  to {
-		    transform: rotate(360deg);
-		  }
-		}
-
 		.animation {
-		  animation-name: rotate;
-		  animation-duration: 1s;
-		  animation-iteration-count: infinite;
-		  animation-timing-function: linear;
+		  opacity: 0;
+		  transition: opacity 0.5s ease-in-out;
 		  text-align: center;
 		  margin-top: 50%;
 		}
 
 		@media only screen and (orientation: portrait) {
 		  #animation {
-		    display: block;
+		    opacity: 1;
 		  }
 
 		  #image-map-pro {
@@ -33,7 +22,7 @@
 
 		@media only screen and (orientation: landscape) {
 		  #animation {
-		    display: none;
+		    opacity: 0;
 		  }
 
 		  #image-map-pro {
@@ -46,8 +35,9 @@
 	<div id="animation" class="animation">Please rotate your screen to view the map</div>
 	<div id="image-map-pro"></div>
 
-	<script src="image-map-pro.min.js"></script>
+	
 </body>
+
 
 <script src="image-map-pro.min.js"></script>
 
