--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         body {
             background-color: #1a1a1a;
             font-family: 'Roboto', sans-serif;
+            font-size: 1.3em; /* Increase font size by 30% */
         }
         #message, #image-map-pro, #loading-overlay {
             display: none;
@@ -17,16 +18,16 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 1.5em;
+            font-size: 1.6em; /* Increase font size by 30% */
             text-align: center;
         }
         #logo {
-            width: 200px; /* Adjust this value to change the logo size */
-            margin-bottom: 20px;
+            width: 260px; /* Increase width by 30% */
+            margin-bottom: 26px; /* Increase margin by 30% */
         }
         #rotate-logo {
-            width: 75px; /* Adjust this value to change the rotate logo size */
-            margin-top: 20px;
+            width: 97.5px; /* Increase width by 30% */
+            margin-top: 26px; /* Increase margin by 30% */
         }
     </style>
 </head>
@@ -82,6 +83,8 @@
   </script>
 </body>
 <script src="image-map-pro.min.js"></script>
+</html>
+
 
 
 
