--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>World Food Trucks Interactive Map 1.02</title>
+    <title>World Food Trucks Interactive Map 1.02</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
         body {
@@ -14,10 +14,10 @@
             flex-direction: column;
             height: 100vh;
         }
-        #message, #image-map-pro {
+        #message, #image-map-pro, #ig-message {
             display: none;
         }
-        #message {
+        #message, #ig-message {
             color: white;
             position: fixed;
             top: 50%;
@@ -70,6 +70,10 @@
             <div>Please rotate your device.</div>
             <div><img id="rotate-logo" src="rotate.png" alt="Rotate"></div>
         </div>
+        <div id="ig-message">
+            The WFT map is not compatible with the Instagram browser. <br>
+            <button onclick="openInBrowser()">Open in Browser</button>
+        </div>
         <a id="back-button" href="http://www.worldfoodtrucks.com">Back</a>
     </div>
 
@@ -78,14 +82,30 @@
             var isPortrait = window.matchMedia("(orientation: portrait)").matches;
             var message = document.getElementById('message');
             var data = document.getElementById('image-map-pro');
+            var igMessage = document.getElementById('ig-message');
 
-            if (isPortrait) {
+            if (isInstagramBrowser()) {
+                igMessage.style.display = 'block';
+                data.style.display = 'none';
+                message.style.display = 'none';
+            } else if (isPortrait) {
                 data.style.display = 'none';
                 message.style.display = 'block';
+                igMessage.style.display = 'none';
             } else {
                 data.style.display = 'block';
                 message.style.display = 'none';
+                igMessage.style.display = 'none';
             }
+        }
+
+        function isInstagramBrowser() {
+            return /Instagram/.test(navigator.userAgent);
+        }
+
+        function openInBrowser() {
+            var url = "https://programmedbyandrew.github.io/imptesting/";
+            window.open(url, '_blank');
         }
 
         window.addEventListener('orientationchange', checkOrientation);
