--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
         <div id="ig-message">
             The WFT map is not compatible with the Instagram browser. <br>
             <div id="ig-instructions">
-                Copy this URL and paste it into your browser: <br>
-                https://programmedbyandrew.github.io/imptesting/
+                To open in an external browser, tap the three dots in the top right corner and select "Open in Browser."
             </div>
         </div>
         <a id="back-button" href="http://www.worldfoodtrucks.com">Back</a>
