--- a/index.html
+++ b/index.html
@@ -48,15 +48,12 @@
         #back-button:hover {
             background-color: darkred;
         }
+        #ig-message .not-compatible {
+            color: red;
+        }
         #ig-instructions {
-            background-color: red;
-            color: white;
-            padding: 15px 30px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 5px;
             margin-top: 20px;
-            text-align: center;
+            font-size: 1.2em;
         }
         /* Adjust the position of the back button for portrait orientation */
         @media (orientation: portrait) {
@@ -81,9 +78,9 @@
             <div><img id="rotate-logo" src="rotate.png" alt="Rotate"></div>
         </div>
         <div id="ig-message">
-            The WFT map is not compatible with the Instagram browser. <br>
+            <div class="not-compatible">Sorry, the World Food Trucks map is not compatible with the Instagram browser.</div>
             <div id="ig-instructions">
-                To open in an external browser, tap the three dots in the top right corner and select "Open in Browser."
+                To view the map, tap the three dots in the top right corner and select "Open in External Browser."
             </div>
         </div>
         <a id="back-button" href="http://www.worldfoodtrucks.com">Back</a>
@@ -122,9 +119,6 @@
         checkOrientation();
     </script>
 </body>
-
-
-
 
 
 <script src="image-map-pro.min.js"></script>
