--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 1.6em;
             text-align: center;
         }
         #logo {
@@ -49,11 +48,23 @@
             background-color: darkred;
         }
         #ig-message .not-compatible {
-            color: red;
+            background-color: red;
+            color: white;
+            padding: 15px 30px;
+            font-size: 1.4em;
+            border-radius: 5px;
+            margin-bottom: 20px;
         }
         #ig-instructions {
-            margin-top: 20px;
             font-size: 1.2em;
+        }
+        .emoji {
+            display: inline-block;
+            animation: bounce 1s infinite;
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
         }
         /* Adjust the position of the back button for portrait orientation */
         @media (orientation: portrait) {
@@ -78,7 +89,7 @@
             <div><img id="rotate-logo" src="rotate.png" alt="Rotate"></div>
         </div>
         <div id="ig-message">
-            <div class="not-compatible">Sorry, the World Food Trucks map is not compatible with the Instagram browser.</div>
+            <div class="not-compatible">Sorry, the World Food Trucks map is not compatible with the Instagram browser. <span class="emoji">🙁</span></div>
             <div id="ig-instructions">
                 To view the map, tap the three dots in the top right corner and select "Open in External Browser."
             </div>
@@ -119,7 +130,6 @@
         checkOrientation();
     </script>
 </body>
-
 
 <script src="image-map-pro.min.js"></script>
 
